--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -77,8 +77,8 @@
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
-      <%= button_to "Candidate Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn" %>
-      <%= button_to "School Leader Registration", "https://docs.google.com/forms/d/e/1FAIpQLSd2POlBM9yr-WfNbRYFOhnTAZCNg8mfF8gFhfSNKCEm2RACsw/viewform?c=0&w=1", method: :get, class: "btn btn-info main-btn" %>
+      <%= button_to "Candidate Job Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn" %>
+      <%= button_to "School Leader Job Fair Registration", "https://docs.google.com/forms/d/e/1FAIpQLSd2POlBM9yr-WfNbRYFOhnTAZCNg8mfF8gFhfSNKCEm2RACsw/viewform?c=0&w=1", method: :get, class: "btn btn-info main-btn" %>
     </div><br>
   <% end %>
 
