Update preferred subjects label

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -159,7 +159,7 @@
   <br>
 
   <div class="field">
-    <label><em class="label-bold">Preferred Subject(s)</em></label><br>
+    <label><em class="label-bold">Preferred Subject(s) For Teaching Candidates</em></label><br>
     <ul class="checkbox-grid">
       <li><input type="checkbox" name="subs[]" value="None" />
       <label>N/A</label></li>
