Minor typo fixes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
 </table>
 <% if @current_user.access == "teacher" %>
   <%= link_to "Upload additional documents", resumes_additional_path, class: "btn btn-primary" %><br><br>
-  <label>Note:</label><span> Your active documents will only be available to charter school leaders who express a recruitment need and will not be available to the general public. Your resume will be deactivated after 30 days. To re-activate, simply log in and select the activate button above.</span>
+  <label>Note:</label><span> Your active documents will only be available to charter school leaders who express a recruitment need and will not be available to the general public.</span>
   <br />
   <br />
 <% end %>
