--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,7 +55,7 @@
   <p class="main-content"><strong>Agenda</strong></p>
   <p class="main-content">
   <ul class="main-content-list">
-    <li>9:00 am - 10:00 pm: School table set-up and Candidate Registration</li>
+    <li>9:00 am - 10:00 am: School table set-up and Candidate Registration</li>
     <li>10:00 am - 12:00 pm: Meet and greet with Candidates & Schools</li>
     <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation only)</li>
   </ul>
