Fix margin on form field

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -147,7 +147,7 @@
       <% else %>
         <li class="field-flex"><input type="checkbox" name="positions[]" value="<%= pos %>" />
       <% end %>
-    <label class="flex-one"><%= pos %></label></li>
+    <label class="flex-one no-margin"><%= pos %></label></li>
     <% end %>
     </ul>
   </div>
@@ -278,7 +278,7 @@
       <% else %>
         <li class="field-flex"><input type="checkbox" name="orgs[]" value="<%= org.name %>" />
       <% end %>
-    <label class="flex-one"><%= org.name %></label><br></li>
+    <label class="flex-one no-margin"><%= org.name %></label><br></li>
     <% end %>
     </ul>
     </div>
