--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
   </h2>
 
   <p class="main-content">
-  The Illinois Network of Charter Schools (INCS) hosted our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business & Finance Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
+  The Illinois Network of Charter Schools (INCS) will host our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business & Finance Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
   </p>
 
 
