Update location and raffle information

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -604,3 +604,11 @@ li.field-flex {
   color: #fff;
   border-color: transparent;
 }
+
+.underline {
+  text-decoration: underline;
+}
+
+.red {
+  color: red;
+}
