--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,8 +12,8 @@
 
   <% if session[:user_id] == nil %>
     <div class="main-container">
-      <%= button_to "Candidate Resume Bank and Job Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
-      <%= button_to "School Leader Resume Bank Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "Candidate Resume Bank Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "Hiring Manager Register Here", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
 
@@ -29,96 +29,26 @@
   </h2>
 
   <p class="main-content">
-  The Illinois Network of Charter Schools (INCS) will host our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business & Finance Campus. Representatives from the state’s charter schools will be on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators. INCS seeks highly qualified candidates who are excited to work in a mission-drive environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
-  </p>
-
-
-
-  <p class="main-content">
-  <strong>Candidates have the opportunity to:</strong>
-  <ul class="main-content-list">
-    <li>Meet recruiters from over 50 public charter schools representing over 120 campuses</li>
-    <li>Post your resume in the INCS Online Resume Bank, where charter schools look for candidates for various positions year-round</li>
-    <li>Interview on-site with schools looking to hire great teachers and administrators like you</li>
-    <li><span class="red">NEW THIS YEAR! </span>We will be raffling off one iPad and five $100 gift cards! Instructions for the raffle will be given at the registration desk.</li>
-  </ul>
-  </p>
-
-  <p class="main-content">
-  <strong>Schools have the opportunity to:</strong>
-  <ul class="main-content-list">
-    <li>Meet with hundreds of educators</li>
-    <li>View candidates’ resumes and credentials ahead of time using the INCS Online Resume Bank</li>
-    <li>Invite candidates for on-site interviews following the meet and greet portion of the event</li>
-  </ul>
-  </p>
-
-  <p class="main-content"><strong>Agenda</strong></p>
-  <p class="main-content">
-  <ul class="main-content-list">
-    <li>9:00 am - 10:00 am: School table set-up and Candidate Registration</li>
-    <li>10:00 am - 12:00 pm: Meet and greet with Candidates & Schools</li>
-    <li>12:00 pm - 1:30 pm: On-site teacher interviews (by invitation only)</li>
-  </ul>
-  </p>
-
-  <%# <p class="main-content"><strong>Registration</strong></p> %>
-  <%# <p class="main-content"> %>
-  <%# Candidate check-in will open at 8:30am. <span style="text-decoration: underline">On-site registration is available</span>. Advance registration is encouraged to avoid extended wait times. %>
-  <%# </p> %>
-
-  <p class="main-content"><strong>Location</strong></p>
-  <p class="main-content">
-  ASPIRA Business & Finance Campus, 2989 N. Milwaukee Ave, Chicago, IL 60618
-  </p>
-
-  <% if session[:user_id] == nil %>
-    <div class="main-container">
-      <%= button_to "Candidate Job Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn" %>
-      <%= button_to "School Leader Job Fair Registration", "https://docs.google.com/forms/d/e/1FAIpQLSd2POlBM9yr-WfNbRYFOhnTAZCNg8mfF8gFhfSNKCEm2RACsw/viewform?c=0&w=1", method: :get, class: "btn btn-info main-btn" %>
-    </div><br>
-  <% end %>
-
-  <p class="main-content underline">
-    PARKING
-  </p>
-  <p class="main-content">
-  Parking is limited and public transportation is encouraged. Street parking is available on Milwaukee and a few side streets surrounding ASPIRA’s campus. Please be aware of permitted parking zones. Candidates are <span class="underline">NOT</span> permitted to park in the ASPIRA parking lot.
-  </p>
-  <p class="main-content underline">
-    CANDIDATE ENTRANCE
-  </p>
-  <p class="main-content">
-    Please enter the school through the entrance on Monticello. Please do not enter through Milwaukee. 
-  </p>
-  <p class="main-content underline">
-    PUBLIC TRANSPORTATION DIRECTIONS
-  </p>
-  <p class="main-content underline">
-    CTA BLUE Line
-  </p>
-  <p class="main-content">
-    <span class="underline">Belmont Stop:</span> The school is approximately 0.5 mile southwest of the Belmont Blue Line stop, about a 10 minute walk.
-  </p>
-  <p class="main-content underline">
-    Bus Transportation
-  </p>
-  <p class="main-content">
-    #56 Milwaukee: Take #56 to Milwaukee & Ridgeway. This stop is a 1-minute walk to the ASPIRA Business & Finance campus.
-  </p>
-
-  <%# <p class="main-content"><br>Click <a href="https://www.facebook.com/media/set/?set=a.10152791985156379.1073741839.91629716378&type=1">here</a> to view photos of our 2015 INCS Teacher Job Fair, where recruiters from <em>over 120 Illinois charter public school campuses met with</em> highly-qualified applicants for more than <em>500</em> teaching, school leadership, social work, school nurse and administrative positions. %>
-  <%# </p> %>
-
-  <p class="main-content">
-  ATTENTION teacher preparation programs and schools of education: INCS is seeking recruitment partners to support our outreach efforts. Please consider sharing our site with highly qualified candidates.
-  </p>
-
-  <!--   <p class="disclaimer">
-    *This activity or event is not sponsored by, associated with, or endorsed by the UNO Charter School Network Inc., or its affiliates.
-    </p> -->
     <p class="main-content">
-    If you have any questions or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+      The Illinois Network of Charter Schools (INCS) hosted our 12th annual Teacher Job Fair on Saturday, March 18, 2017 at ASPIRA Business and Finance High School. Representatives from the state’s charter schools were on hand to recruit hundreds of teachers, social workers, counselors, nurses, and other administrators.
+    </p>
+    <p class="main-content">
+      INCS continues to seek highly qualified candidates who are excited to work in a mission-driven environment and to TEACH, LEAD, and SUCCEED. To upload your resume into our <span style="text-decoration: underline">year-round database</span>, please select “Candidate Resume Bank Registration” above.
+    </p>
+    <p class="main-content">
+      Did you know INCS also has a jobs board? To browse current openings in Illinois charter public schools, please visit us <a href="https://www.incschools.org/jobs/jobs-at-charter-schools/">here</a>.
+    </p>
+    <p class="main-content">
+      <span style="text-decoration: underline">To find a charter public school near you, please visit us <a href="https://www.incschools.org/about-charters/find-a-charter-school/">here</a></span>.
+    </p>
+    <p class="main-content">
+      If you have any questions or would like to receive a 2017 Teacher Job Fair flyer, please contact Stephanie Arias, INCS Charter Support Manager, at <%=mail_to("SArias@incschools.org")%>
+    </p>
   </p>
+
+  <p class="main-content grayed">
+    ABOUT INCS: The Illinois Network of Charter Schools (INCS) advocates for the improvement of public education by leveraging the charter school model as a catalyst to transform lives and communities. INCS works to ensure that charter public schools have adequate and equitable resources, the autonomy to find innovative approaches to meet student needs, and a fair and transparent policy landscape that allows high-quality options to thrive. As the voice of Illinois charter schools, INCS engages a diverse coalition of policymakers, school leaders, parents, and community members to create systemic change and secure high-quality schools for undeserved communities. Learn more about us <a href="www.incschools.org/">here</a>. 
+  </p>
+
 
 </div>
